@@ -10,6 +10,7 @@ Version 1.7.10+svn:
    * Allow a gui2 timer delete itself in its callback
    * Fix various bugs when a unit has more MP than its maximum
    * Fix not redrawing a grid when set to hidden
+   * Add helper functions to show/hide rows in a listbox
 
 Version 1.7.10-1.8beta3:
  * Campaigns:
